; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_wakeup_thread.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_wakeup_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsg_dev = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fsg_dev*)* @wakeup_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wakeup_thread(%struct.fsg_dev* %0) #0 {
  %2 = alloca %struct.fsg_dev*, align 8
  store %struct.fsg_dev* %0, %struct.fsg_dev** %2, align 8
  %3 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %4 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %3, i32 0, i32 0
  store i32 1, i32* %4, align 8
  %5 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %6 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %11 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @wake_up_process(i64 %12)
  br label %14

14:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @wake_up_process(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
